WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303647
Caption Preview is not shown in default media controls
https://bugs.webkit.org/show_bug.cgi?id=303647
Summary
Caption Preview is not shown in default media controls
Jer Noble
Reported
2025-12-05 11:24:21 PST
Caption Preview is not shown in default media controls
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-05 11:24:28 PST
<
rdar://problem/165931046
>
Jer Noble
Comment 2
2025-12-05 11:28:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54942
EWS
Comment 3
2025-12-06 21:46:56 PST
Committed
304070@main
(82c5da0f4337): <
https://commits.webkit.org/304070@main
> Reviewed commits have been landed. Closing PR #54942 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug